--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,9 +20,9 @@ jobs:
         with:
           node-version: 18
       - name: Install dependencies
-        run: npm ci
+        run: npm install
       - name: Build Docusaurus site
-        run: npm run build
+        run: npm run build 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
