--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,10 +19,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 16
-      - name: Install dependencies
-        run: npm install
-      - name: Build Docusaurus site
-        run: npm run build 
+      - name: Build
+        working-directory: .
+        run: |
+          npm install
+          npm run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
