--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "docusaurus build",
     "serve": "docusaurus serve",
     "clear": "docusaurus clear",
-    "deploy": "docusaurus deploy"
+    "deploy": "DEPLOYMENT_BRANCH=gh-pages docusaurus deploy"
   },
   "dependencies": {
     "@docusaurus/core": "2.4.1",
