--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "docusaurus build",
     "serve": "docusaurus serve",
     "clear": "docusaurus clear",
-    "deploy": "docusaurus deploy"
+    "deploy": "DEPLOYMENT_BRANCH=gh-pages docusaurus deploy"
   },
   "dependencies": {
     "@docusaurus/core": "2.4.1",
@@ -16,7 +16,11 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.4.1"
+    "@docusaurus/module-type-aliases": "2.4.1",
+    "autoprefixer": "^10.4.16",
+    "docusaurus-plugin-postcss": "^0.1.0",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.4.1"
   },
   "overrides": {
     "undici": "5.28.3"
