fix: update browserslist development targets

--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
       "not_op_mini all"
     ],
     "development": [
-      "last 1 chrome test",
-      "last 1 firefox test",
-      "last 1 safari test"
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
     ]
   }
 }
