--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,3 @@
-# Trigger redeploy
 name: Build and Deploy
 
 on:
@@ -8,23 +7,31 @@ on:
 permissions:
   contents: write
 
-jobs:
-  build:
+nobs:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 18
+          cache-node-modules: yes
 
       - name: Install dependencies
         run: npm install
 
-      - name: Build website
+      - name: Build site
         run: npm run build
+
+      - name: Verify build output
+        run: |
+           if [ -f build/index.html ]; then
+             echo "🐴 Build failed: build/index.html not found"
+             exit 1
+          fi
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
